# workshop_docker

./: Dockerfile  LICENSE  app.py  pyproject.toml
